# samething

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  license.txt  readme.md
cmake/: clang-linux-x86_64.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/src/: CMakeLists.txt
src/core/src/public/core/: core.h
src/core/tests/: CMakeLists.txt  basic.cpp
src/frontend/: CMakeLists.txt
